# rmt-from-2019

./: CMakeLists.txt  README.md
emacs/: rmt-mode.el
examples/: CMakeLists.txt  constant-propagation01.rmt  constant-propagation02.rmt  copy-propagation.rmt  hoisting.rmt  if-conversion.rmt  licm.rmt  loop-fission-S1.rmt  loop-fission-S2.rmt  loop-flattening.rmt  loop-fusion-S1.rmt  loop-fusion-S2.rmt  loop-interchange.rmt  loop-peeling.rmt  loop-reversal.rmt  loop-skewing.rmt  loop-tiling01.rmt  loop-tiling02.rmt  loop-unrolling01.rmt  loop-unrolling02.rmt  loop-unswitch.rmt  pre.rmt  software-pipelining.rmt  strength-reduction.rmt
examples/equivalence-compiler-optimizations-concrete/: fun-constant-propagation01.rmt  fun-constant-propagation02.rmt  fun-hoisting.rmt  fun-if-conversion.rmt  fun-licm.rmt  fun-loop-fission.rmt  fun-loop-flattening.rmt  fun-loop-interchange_attempt.rmt  fun-loop-peeling.rmt  fun-loop-reversal.rmt  fun-loop-self-1.rmt  fun-loop-self-2.rmt  fun-loop-skewing.rmt  fun-loop-tiling01.rmt  fun-loop-tiling02.rmt  fun-loop-unrolling01_incomplete.rmt  fun-loop-unrolling02.rmt  fun-loop-unswitch.rmt  fun-pre.rmt  fun-software-pipelining.rmt  fun-strength-reduction.rmt
examples/equivalence-compiler-optimizations-generic/: fun-hoisting.rmt  fun-licm.rmt  fun-loop-fission-S2.rmt  fun-loop-flattening.rmt  fun-loop-fusion-S1.rmt  fun-loop-fusion-S2.rmt  fun-loop-interchange.rmt  fun-loop-reversal.rmt  fun-loop-unrolling01.rmt  fun-software-pipelining.rmt
examples/equivalence-new-examples/: nondeterminism.rmt
examples/equivalence-submission/: example1_fun1_f_fa_partial.rmt  example1_fun1_f_fa_total.rmt  example1_fun1_f_fa_total_typo.rmt  example1_fun1_fa_f_partial.rmt  example1_fun1_fa_f_total.rmt  example2_fun2_f_fa_partial.rmt  example2_fun2_f_fa_total.rmt  example2_fun2_fa_f_partial.rmt  example2_fun2_fa_f_total.rmt  example3_fun1_fun2_f_fa_partial.rmt  example3_fun2_fun1_F_f_partial.rmt  example4_fun1_while_miu.rmt  example5_fun1_ifwhile_whileif.rmt  example6_fun1_higherorder.rmt
examples/equivalence-submission-old/: fun-refactored-example-ifwhile.rmt  fun-refactored-example-sum-b.rmt  fun-refactored-example-sum-f-imp.rmt  fun-refactored-example-sum.rmt  fun-refactored-lists.rmt  fun-refactored.rmt  fun-running-example-complete-partial.rmt  fun-running-example-simplified-partial.rmt  fun-running-example-simplified-total.rmt  imp-running-example-1.rmt  imp-running-example-2.rmt  imp-running-example-3.rmt  imp-running-example-4.rmt  imp-running-example-5.rmt  imp-running-example-6.rmt  imp-running-example-7.rmt
examples/equivalence/delmas-mine/: ex1.rmt  ex2.rmt
examples/equivalence/imp-optimizations/: 01-constant-propagation.rmt  02-constant-propagation.rmt
examples/equivalence/initial-examples/: equiv-bug-1.rmt  equiv-bug-2.rmt  equiv.rmt  equiv10.rmt  equiv11.rmt  equiv12.rmt  equiv2.rmt  equiv4.rmt  equiv5.rmt  equiv6.rmt  equiv62.rmt  equiv6_t.rmt  equiv7.rmt  equiv8.rmt  equiv9.rmt
examples/known-problems/: commutativity.rmt
examples/perr-2019/: accumulator-vs-nonacc-simplified-partial.rmt  accumulator-vs-nonacc-simplified-total.rmt  imp-constant-propagation.rmt  imp-for-vs-while.rmt  imp-sun-asc-vs-desc.rmt  imp-vs-fun-simplesum.rmt  sum-ascending-vs-descending.rmt
examples/submission-examples/: 00-running-example.rmt  01-sum-v1.rmt  01-sum-v2.rmt  01-sum-v3.rmt  01-sum-v4.rmt  01-sum-v5.rmt  02-gcd-subtractions-v1.rmt  03-gcd-divisions-v1.rmt  03-gcd-divisions-v2.rmt  04-multiplication-by-addition-v1.rmt  05-squares-v1.rmt  06-squares-v1.rmt  07-imp-v1.rmt  08-fun-v1.rmt  09-fun-v1.rmt
examples/termination/: 1.1_addition.rmt  1.2_addition_bad_variant.rmt  1.3_addition_variant.rmt  2.1_zune_partial.rmt  2.2_zune_total.rmt  2.3_zune_fixed.rmt  3.1_IMP_loop.rmt  3.2_IMP_sum.rmt  4.1-square-variant.rmt  5.1-inc-dec.rmt
examples/total-correctness-examples/: example1.rmt  example1_2.rmt  example2_4.rmt  examplew.rmt
examples/z-all-examples/: demo.rmt  equiv.rmt  equiv1.rmt  equiv2.rmt  equiv3.rmt  equiv4.rmt  equiv5.rmt  equiv6.rmt  equiv7.rmt  equiv8.rmt  equiv9.rmt  example1.rmt  example10.rmt  example11.rmt  example12.rmt  example13.rmt  example14.rmt  example2.rmt  example3.rmt  example4.rmt  example4_p.rmt  example5.rmt  example6.rmt  example7.rmt  example8.rmt  example9.rmt  example_interactive.rmt  example_valeriu.rmt  examplecirctop.rmt  examplefun1.rmt  examplefun2.rmt  examplefun3.rmt  examplefun4.rmt  examplefun5.rmt  exampleimp1.rmt  exampleimp2.rmt  exampleimp3.rmt  exponential_unify_example.rmt  gcd.rmt  gcd1.rmt  (+27 more)
src/: CMakeLists.txt  constrainedrewritesystem.cpp  constrainedrewritesystem.h  constrainedsolution.cpp  constrainedsolution.h  constrainedterm.cpp  constrainedterm.h  factories.cpp  factories.h  function.h  funterm.cpp  funterm.h  helper.cpp  helper.h  ldecompalg.cpp  ldecompalg.h  ldegraphalg.cpp  ldelexalg.cpp  ldelexalg.h  ldeslopesalg.cpp  ldeslopesalg.h  log.cpp  log.h  main.cpp  parse.cpp  parse.h  query.cpp  query.h  queryaccunify.cpp  queryaccunify.h  queryacsunify.cpp  queryacsunify.h  queryacunify.cpp  queryacunify.h  queryacuunify.cpp  queryacuunify.h  queryaxiom.cpp  queryaxiom.h  querycirc.cpp  querycirc.h  (+64 more)
tests/smt/: smt1.rmt  smt2.rmt  smt3.rmt  smt4.rmt  smt5.rmt  smt6.rmt
